--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ffprobe/ffmpeg"]
-	path = ffprobe/ffmpeg
+[submodule "core/ffmpeg"]
+	path = core/ffmpeg
 	url = https://git.ffmpeg.org/ffmpeg.git
